# airticket

./: .gitmodules  .req.config.yml  AGENTS.md  render.yaml
.claude/: settings.json
.claude/agents/: req-conflict-detector.md  req-onboarder.md  req-research.md
.claude/commands/: req-audit.md  req-autonomy.md  req-deploy.md  req-detect-conflicts.md  req-feedback.md  req-implement.md  req-intake.md  req-iterate.md  req-onboard.md  (+5 more)
conflicts/: CONFLICT-001.md  CONFLICT-002.md  CONFLICT-003.md  CONFLICT-004.md  CONFLICT-005.md
docs/: changelog.md  glossary.md  workflow.md
personas/: ticket-searcher.md
reviews/: REVIEW-core-experience-enhancement-2026-04-06.md  REVIEW-global-flight-search-2026-04-06.md  REVIEW-travel-planner-app-2026-04-05.md
src/backend/: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
src/backend/app/: main.py
src/backend/app/airports/: build_data.py  service.py
src/backend/app/api/: airports.py  auth.py  expenses.py  flights.py  router.py  schedules.py  share.py  tickets.py  trips.py
src/backend/app/auth/: deps.py  models.py  schemas.py  service.py
src/backend/app/core/: config.py  database.py  models.py  redis.py
src/backend/app/expenses/: models.py  service.py
src/backend/app/flights/: crawler_router.py  evaair_crawler.py  models.py  service.py  starlux_crawler.py
src/backend/app/scheduler/: service.py
src/backend/app/tickets/: crawler.py  models.py  outstation.py  service.py
src/backend/app/trips/: comments.py  models.py  service.py  share.py  websocket.py
src/backend/data/: airports.json
(+82 files in other folders)
